--- a/css/style/style.css
+++ b/css/style/style.css
@@ -28,13 +28,14 @@ ul {
     background: var(--bg-color-900);
     min-height: 100vh;
     display: block;
-    position: fixed;
-    left: 270px;
     padding: 0 30px;
-    top: 0;
-    right: 0;
-    z-index: 0;
     opacity: 1;
+}
+.hidden {
+    display: none !important;
+}
+.main-content {
+    padding-left: 270px;
 }
 .padd-15 {
     padding-left: 15px;
@@ -44,6 +45,15 @@ ul {
     max-width: 1100px;
     width: 100%;
     margin: auto;
+}
+section .container {
+    padding-top: 60px;
+    padding-bottom: 70px;
+}
+.section-title {
+    flex: 0 0 100%;
+    max-width: 100%;
+    background: red;
 }
 .row {
     display: flex;
@@ -100,7 +110,7 @@ ul {
 }
 .aside .logo a span {
     font-family: 'Clicker Script', cursive;
-    font-family: 40px;
+    font-size: 40px;
 }
 .aside .logo a::before {
     content: '';
@@ -215,12 +225,34 @@ h3.my-profession {
     color: var(--text-black-700);
 }
 .home .home-img {
-    flex: 0 0 40px;
+    flex: 0 0 40%;
     max-width: 40%;
-    /* background: red; */
     text-align: center;
     position: relative;
+    /* padding: 15px;  Chatgbt */
+}
+.home-img::after {
+    content: '';
+    position: absolute;
+    height: 80px;
+    width: 80px;
+    border-bottom: 10px solid var(--skin-color);
+    border-right: 10px solid var(--skin-color);
+    right: 20px;
+    bottom: -40px;
+}
+.home-img::before {
+    content: '';
+    position: absolute;
+    height: 80px;
+    width: 80px;
+    border-top: 10px solid var(--skin-color);
+    border-left: 10px solid var(--skin-color);
+    left: -20px;
+    top: -40px;
 }
 .home .home-img img {
+    margin: auto;
+    border-radius: 5px;
     height: 400px;
 }
