--- a/css/style/style.css
+++ b/css/style/style.css
@@ -53,7 +53,32 @@ section .container {
 .section-title {
     flex: 0 0 100%;
     max-width: 100%;
-    background: red;
+    margin-bottom: 60px;
+}
+.section-title h2 {
+    font-size: 40px;
+    color: var(--text-black-900);
+    font-weight: 700;
+    position: relative;
+}
+.section-title h2::before {
+    content: '';
+    height: 4px;
+    width: 50px;
+    background: var(--skin-color);
+    position: absolute;
+    top: 100%;
+    left: 0;
+}
+.section-title h2::after {
+    content: '';
+    height: 4px;
+    width: 25px;
+    background: var(--skin-color);
+    position: absolute;
+    top: 100%;
+    left: 0;
+    margin-top: 8px;
 }
 .row {
     display: flex;
@@ -255,4 +280,10 @@ h3.my-profession {
     margin: auto;
     border-radius: 5px;
     height: 400px;
+}
+/* About */
+.about .about-content {
+    flex: 0 0 100%;
+    max-width: 100%;
+    
 }
